[package]
name = "actix-web-app"
version = "0.1.0"
authors = ["Esteban Victorio <estebanvictorio92@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
env_logger = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"